--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio - Glassmorphism</title>
+    <title>Portfolio -onji try korka </title>
 
     <!-- Favicons -->
     <link rel="icon" href="./assets/favicon.ico" type="image/x-icon" />
@@ -27,7 +27,7 @@
     />
     <link rel="manifest" href="./assets/site.webmanifest" />
 
-    <meta name="author" content="Pratheek" />
+    <meta name="author" content="Bhakta @27" />
     <meta
       name="description"
       content="Developer Portfolio centered around GlassMorphic UI"
@@ -67,7 +67,9 @@
         <div id="top" class="page-scroll"></div>
         <!-- Navbar -->
         <header>
-          <a href="#top" class="logo">DELTA-SJEC</a>
+          <a href="#top" class="logo">BHAKTA@SJEC</a><h2><span class="wave">
+            <img src="./assets/image.png.png" class="shape"style="height: 8rem; width: 8rem; top: 8rem; right: 20rem"alt="sjec log"data-aos="fade-up-right" data-aos-duration="1000"/></span></h2></header>
+            
           <ul>
             <li><a class="active page" href="#top" id="home-btn">Home</a></li>
             <li><a href="#about" class="page" id="about-btn">About Me</a></li>
@@ -84,11 +86,11 @@
         <!-- Main Content -->
         <div class="content">
           <div class="column">
-            <h2 data-aos="fade-down" data-aos-duration="1000">Hi all, We are DELTA-SJEC<span class="wave">👋</span></h2>
+            <h2 data-aos="fade-down" data-aos-duration="1000">Hi i am, Pramathesh Bhakta<span class="wave">👋💻</span></h2>
             <p data-aos="fade-right" data-aos-duration="1000">
-              We love software development, machine learning and deep learning. We
+              I love software development, machine learning and deep learning. I
               know a little bit of Web Dev too and Flutter! Want to discuss
-              regarding any project or just want to say a Hi? We are always
+              regarding any project or just want to say a Hi? I am always
               available to listen you :)
             </p>
             <a href="#home" data-aos="fade-right" data-aos-duration="1000">Contact Me</a>
@@ -188,7 +190,7 @@
               </defs>
             </svg>
             <h2 style="font-weight: 550">
-              <span class="low-highlight-pink">What We do</span>
+              <span class="low-highlight-pink">What i do</span>
             </h2>
             <h3 style="font-size: 24px; color: #444444; font-weight: 1">
               We love all aspects of technology and want to explore as much as we
